fix titles gaps and margins

--- a/wp-content/themes/Yara/assets/scss/templates/landingPage/_landingPageDesktop.scss
+++ b/wp-content/themes/Yara/assets/scss/templates/landingPage/_landingPageDesktop.scss
@@ -2,9 +2,13 @@
     .landingPageContainer {
         .warper {
             display: grid !important;
+            h3{
+                font-size: 28px;
+            }
             .title{                
                 margin-top: 20px !important;
-                margin-bottom: calc(var(--sectionSpacer) / 2) !important;
+                margin-bottom: 20px !important;
+                margin-left: 13px !important;
             }
             ul {
                 &.--col2 {
