--- a/wp-content/themes/Yara/assets/scss/templates/landingPage/_landingPageTablet.scss
+++ b/wp-content/themes/Yara/assets/scss/templates/landingPage/_landingPageTablet.scss
@@ -5,11 +5,15 @@
             display: block !important;
             padding-left: 18px !important;
             padding-right: 0 !important;
+            h3{
+                margin-left: 8px !important;
+            }
 
             .title{
                 
                 margin-top: 60px !important;
                 margin-bottom: calc(var(--sectionSpacer) / 2) !important;
+                margin-left: 10px ;
             }
             ul {
                
