--- a/wp-content/themes/Yara/style.css
+++ b/wp-content/themes/Yara/style.css
@@ -675,14 +675,23 @@ div[data-slider-dataHolder] {
   display: block;
 }
 .landingPageContainer--holder .warper h3 {
-  margin: 0 0 40px 10px;
+  margin: 0 0 40px 0px;
   margin-bottom: calc(var(--sectionSpacer) / 2) !important;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 125%; /* 30px */
+  letter-spacing: -0.36px;
 }
 .landingPageContainer--holder .warper .title {
   align-self: end;
   height: 30px;
   justify-self: start;
-  margin-left: 11px;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 140%; /* 25.2px */
+  letter-spacing: -0.27px;
 }
 .landingPageContainer--holder .warper ul li, .landingPageContainer--holder .warper ul strong {
   height: 78px;
@@ -760,9 +769,13 @@ div[data-slider-dataHolder] {
     padding-left: 18px !important;
     padding-right: 0 !important;
   }
+  .landingPageContainer .warper h3 {
+    margin-left: 8px !important;
+  }
   .landingPageContainer .warper .title {
     margin-top: 60px !important;
     margin-bottom: calc(var(--sectionSpacer) / 2) !important;
+    margin-left: 10px;
   }
   .landingPageContainer .warper ul li, .landingPageContainer .warper ul strong {
     width: calc(100% - 18px);
@@ -793,9 +806,13 @@ div[data-slider-dataHolder] {
   .landingPageContainer .warper {
     display: grid !important;
   }
+  .landingPageContainer .warper h3 {
+    font-size: 28px;
+  }
   .landingPageContainer .warper .title {
     margin-top: 20px !important;
-    margin-bottom: calc(var(--sectionSpacer) / 2) !important;
+    margin-bottom: 20px !important;
+    margin-left: 13px !important;
   }
   .landingPageContainer .warper ul.--col2 {
     display: grid;
